--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "veggie-orders-jo",
+  "name": "asr",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,8 +9,11 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@neondatabase/serverless": "^1.0.2",
+    "bcryptjs": "^3.0.3",
     "clsx": "^2.1.1",
-    "firebase": "^12.8.0",
+    "drizzle-orm": "^0.45.1",
+    "jose": "^6.1.3",
     "lucide-react": "^0.562.0",
     "next": "16.1.3",
     "react": "19.2.3",
@@ -20,9 +23,11 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "drizzle-kit": "^0.31.9",
     "eslint": "^9",
     "eslint-config-next": "16.1.3",
     "tailwindcss": "^4",
